# dhtnet

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  Dockerfile  Jenkinsfile  Makefile.sonar  Packaging.md  README.md  build_tar_gz.sh  dhtnet.pc.in  sonar-project.properties
.devcontainer/: devcontainer.json
.github/workflows/: release-package.yml
dependencies/: build.py
dhtnc/: dhtnc.cpp  dhtnc.h  main.cpp
dnc/: dnc.cpp  dnc.h  main.cpp
example/: client.cpp  server.cpp
example/client/: client.cpp  main.cpp
example/server/: main.cpp
exemple/: client.cpp  main.cpp  server.cpp
extras/ci/tests/: Jenkinsfile
extras/packaging/: .gitignore  Jenkinsfile  build.version  build_packages.sh
extras/packaging/almalinux-9/: dhtnet-0.3.0-1.sha512  dhtnet-0.3.0.sha512
extras/packaging/debian-12/: dhtnet-0.3.0.sha512
extras/packaging/fedora-39/: dhtnet-0.3.0.sha512
extras/packaging/fedora-40/: dhtnet-0.3.0.sha512
extras/packaging/gnu-linux/: almalinux-9.Dockerfile  almalinux_9.Dockerfile  debian-10.Dockerfile  debian-11.Dockerfile  debian-12.Dockerfile  debian_10.Dockerfile  debian_12.Dockerfile  fedora-39.Dockerfile  fedora-40.Dockerfile  fedora_40.Dockerfile  test-install.Dockerfile  ubuntu-20.Dockerfile  ubuntu-22.Dockerfile  ubuntu-24.Dockerfile  ubuntu_24.04.Dockerfile  ubuntu_24.10.Dockerfile
extras/packaging/gnu-linux/almalinux/: dhtnet.spec
extras/packaging/gnu-linux/debian/: README.Debian  changelog  control  copyright  debhelper-build-stamp  dhtnet.install  dhtnet.postrm.debhelper  dhtnet.substvars  files  libdhtnet-dev.install  libdhtnet0.install  postinst  postrm  rules
extras/packaging/gnu-linux/fedora/: dhtnet.spec
extras/packaging/ubuntu-22/: dhtnet-0.3.0.sha512
extras/packaging/ubuntu-24/: dhtnet-0.3.0.sha512
extras/virtual-networking/: README.md  run.py  setup-dual-access-network.sh  setup-dual-router-handover-network.sh  setup-fake-upnp-network.sh
extras/virtual-networking/actors/: dht-bootstrap-node.py  dhtnet-tooling.sh  launch-dsh-listener.sh
extras/virtual-networking/docs/: adding-tests.md  baseline-scenario.md  fake-network-environments.md  result-format.md
extras/virtual-networking/fixtures/: local-bootstrap-ipv6.json  local-bootstrap.json  miniupnpd-edge-router.json  miniupnpd-node-a-router.json  miniupnpd-node-b-router.json  miniupnpd-node-c-router.json  miniupnpd-uplink-a.json  miniupnpd-uplink-b.json  miniupnpd-wifi-router.json
extras/virtual-networking/lib/: actor_output.py  common.sh  fixtures.sh  netns.sh  probe_runner.py  result-recording.sh  result_recorder_cli.py  result_summary.py  topology.sh  topology_json.py  upnp.sh
extras/virtual-networking/lib/core/: models.py  paths.py  util.py
extras/virtual-networking/lib/loaders/: context_loader.py  topology_loader.py
extras/virtual-networking/lib/probe_actions/: dhtnet.py
extras/virtual-networking/lib/reporting/: cli_printer.py  result_recorder.py  result_summary.py
extras/virtual-networking/lib/runner/: cli_printer.py  context_loader.py  models.py  result_recorder.py  runtime_orchestrator.py  topology_loader.py  util.py
extras/virtual-networking/lib/runtime/: actor_runtime.py  fixture_runtime.py  lifecycle.py  probe_runtime.py  runtime_orchestrator.py  service_runtime.py  (+1 more)
extras/virtual-networking/probes/: assert-ipv4-routes.json  assert-ipv6-routes.json  capture-namespace-command.json  dht-bootstrap-node.py  dsh-ipv6-roundtrip.json  dsh-roundtrip.json  igd-discovery.json  namespace-command.json  probe-dht-from-wan.sh
extras/virtual-networking/scenarios/: dual-access-ipv6.json  dual-access-smoke.json  dual-router-handover-smoke.json  three-node-upnp-discovery.json  upnp-static.json
extras/virtual-networking/services/: dht-bootstrap-node.py  launch-dsh-listener.sh
extras/virtual-networking/topologies/: dual-access-ipv6.json  dual-access.json  dual-router-handover.json  single-router.json  three-upnp-routers.json
include/: certstore.h  channel_socket.h  channel_utils.h  connectionmanager.h  diffie-hellman.h  fileutils.h  generic_io.h  ice_options.h  ice_socket.h  ice_transport.h  ice_transport_factory.h  ip_utils.h  multiplexed_socket.h  pj_init_lock.h  pj_lock.h  sip_utils.h  string_utils.h  tls_session.h  turn_cache.h  turn_params.h
include/compat/msvc/: windirent.h
include/upnp/: mapping.h  upnp_context.h  upnp_control.h  upnp_thread_util.h
src/: channel_socket.cpp  connectionmanager.cpp  fileutils.cpp  fileutils.h  ice_socket.h  ice_transport.cpp  ice_transport.h  ice_transport_factory.h  ip_utils.cpp  multiplexed_socket.cpp  peer_connection.cpp  peer_connection.h  sip_utils.cpp  sip_utils.h  string_utils.cpp
src/security/: certstore.cpp  diffie-hellman.cpp  security_const.h  threadloop.cpp  threadloop.h  tls_session.cpp
src/tracepoint/: trace-tools.h  tracepoint-def.h  tracepoint.h
src/transport/: peer_channel.h
src/turn/: turn_cache.cpp  turn_transport.cpp  turn_transport.h
src/upnp/: upnp_context.cpp  upnp_context.h  upnp_control.cpp  upnp_control.h  upnp_thread_util.h
src/upnp/protocol/: igd.cpp  igd.h  mapping.cpp  mapping.h  upnp_protocol.h
temp/: dhParams  treatedMessages
tests/: certstore.cpp  connectionManager.cpp  ice.cpp  peerDiscovery.cpp  testChannelUtils.cpp  testFileutils.cpp  testString_utils.cpp  test_runner.h  turnCache.cpp
tests/functional_tests/: peerDiscovery.cpp
tests/network/: Dockerfile.dhtnode  coturn.conf  docker-compose.yml  run_scenarios.py  test_connection.cpp
tools/: README.md  common.cpp  common.h
tools/benchmark/: main.cpp
tools/dhtnet_crtmgr/: README.md  dhtnet-crtmgr.1  dhtnet_crtmgr.cpp  dhtnet_crtmgr.h  main.cpp
tools/dnc/: README.md  dnc.1  dnc.cpp  dnc.h  dnc.yaml  main.cpp
tools/dnc/systemd/: dhtnet-dnc.preset  dnc.service.in  dnc.yaml
tools/dsh/: README.md  dsh.1  dsh.cpp  dsh.h  dsh.yaml  main.cpp
tools/dvpn/: README.md  dvpn.1  dvpn.cpp  dvpn.h  dvpn.yaml  dvpn_up.sh  main.cpp  test_config.yaml  test_config.yml
tools/peerdiscovery/: peerDiscovery.1  peerDiscovery.cpp
tools/upnp/: upnpctrl.1  upnpctrl.cpp
(+27 files in other folders)
